Bug 2546 - Xnest doesn't update shape regions
Summary: Xnest doesn't update shape regions
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xnest (show other bugs)
Version: 6.8.2
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
: 28129 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-02-15 05:34 UTC by Mark McLoughlin
Modified: 2010-08-06 08:20 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
patch against 6.8.2 (1.67 KB, patch)
2005-02-15 05:35 UTC, Mark McLoughlin
no flags Details | Splinter Review
Patch for 2005-03-02-trunk (same as attachment #1906 + Changelog diff) (6.53 KB, patch)
2005-03-02 06:19 UTC, Roland Mainz
roland.mainz: 6.8-branch?
Details | Splinter Review

Description Mark McLoughlin 2005-02-15 05:34:14 UTC
Whenever a client changes the shape regions on a window, Xnest doesn't
automatically update them on the backend Xserver.

Trivial fix which overrides miSetShape() attached.
Comment 1 Mark McLoughlin 2005-02-15 05:35:26 UTC
Created attachment 1906 [details] [review]
patch against 6.8.2
Comment 2 Mark McLoughlin 2005-02-15 05:44:17 UTC
Problem is very obvious if you run a GNOME session in Xnest on Fedora. The
BlueCurve window manager them uses shaped window corners. Metacity updates
the shape regions on resize. So, you see problems like:

  http://www.gnome.org/~markmc/screenshots/run-dialog-in-xnest.png
Comment 3 Mike A. Harris 2005-02-16 14:20:01 UTC
Comment on attachment 1906 [details] [review]
patch against 6.8.2

Nominating for stable branch.  Should be put into CVS head simultaneously if
approved.
Comment 4 Roland Mainz 2005-03-02 06:17:57 UTC
Mike A. Harris wrote:
> (From update of attachment 1906 [details] [review] [edit])
> Should be put into CVS head simultaneously if approved.

Uhm... normally patches should go into Xorg trunk first and then they should be
nominated (mainly to ensure that they have been tested in trunk first) ...
Comment 5 Roland Mainz 2005-03-02 06:19:43 UTC
Created attachment 2005 [details] [review]
Patch for 2005-03-02-trunk (same as attachment #1906 [details] [review] + Changelog diff)
Comment 6 Roland Mainz 2005-03-02 06:22:40 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.789; previous revision: 1.788
/cvs/xorg/xc/programs/Xserver/hw/xnest/Screen.c,v  <-- 
xc/programs/Xserver/hw/xnest/Screen.c
new revision: 1.5; previous revision: 1.4
/cvs/xorg/xc/programs/Xserver/hw/xnest/Window.c,v  <-- 
xc/programs/Xserver/hw/xnest/Window.c
new revision: 1.3; previous revision: 1.2
/cvs/xorg/xc/programs/Xserver/hw/xnest/XNWindow.h,v  <-- 
xc/programs/Xserver/hw/xnest/XNWindow.h
new revision: 1.3; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...

.. marking bug as FIXED.
Comment 7 Roland Mainz 2005-03-02 06:22:52 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.789; previous revision: 1.788
/cvs/xorg/xc/programs/Xserver/hw/xnest/Screen.c,v  <-- 
xc/programs/Xserver/hw/xnest/Screen.c
new revision: 1.5; previous revision: 1.4
/cvs/xorg/xc/programs/Xserver/hw/xnest/Window.c,v  <-- 
xc/programs/Xserver/hw/xnest/Window.c
new revision: 1.3; previous revision: 1.2
/cvs/xorg/xc/programs/Xserver/hw/xnest/XNWindow.h,v  <-- 
xc/programs/Xserver/hw/xnest/XNWindow.h
new revision: 1.3; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...

.. marking bug as FIXED.
Comment 8 Roland Mainz 2005-03-02 06:23:34 UTC
Comment on attachment 1906 [details] [review]
patch against 6.8.2

Moving approval request to new patch (attachment #2005 [details] [review]) ...
Comment 9 Roland Mainz 2005-03-02 06:24:38 UTC
Comment on attachment 2005 [details] [review]
Patch for 2005-03-02-trunk (same as attachment #1906 [details] [review] + Changelog diff)

Requesting approval for X11R6.8.x stable branch (plain&&simple fix) ...
Comment 10 Krzysztof Grygiencz 2010-05-16 07:43:58 UTC
*** Bug 28129 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.