xc/programs/Xserver/hw/xnest/Screen.c xc/programs/Xserver/hw/xnest/Window.c //bugs.freedesktop.org/show_bug.cgi?id=2546) attachment #2005     (https://bugs.freedesktop.org/attachment.cgi?id=2005): Fix Xnest to     update the shape regions in the backend server whenever a client     changes them in Xnest (the fix is to add a new wrapper which calls     |xnestShapeWindow()| before calling |miSetShape()|). Patch by Mark     McLoughlin <mark@skynet.ie>